--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+
+.spinner-border{
+    margin: 150px 0px;
+}
+.active-color a{
+    color: #000 !important;
+    font-weight: 500;
+}
