--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
                     <a class="navbar-brand" href="#">Store App</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                   
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse"  *ngIf="isAuthenticated">
                       <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active" [routerLink]="['']"  routerLinkActive="active-color" [routerLinkActiveOptions]="{ exact: true }">
+                        <li class="nav-item active"  [routerLink]="['']"  routerLinkActive="active-color" [routerLinkActiveOptions]="{ exact: true }">
                           <a class="nav-link">Dashboard</a>
                         </li>
                         <li class="nav-item active" [routerLink]="['/products']"  routerLinkActive="active-color" [routerLinkActiveOptions]="{ exact: true }">
@@ -21,6 +21,8 @@
                         </li>
                       </ul>
                     </div>
+                    <a class="nav-item mr-3 nav-link p-3" *ngIf="isAuthenticated"(click)="logout()">Logout</a>
+                    <a class="nav-item mr-3 nav-link p-3" *ngIf="!isAuthenticated"(click)="login()">Login</a>
                   </nav>
             </div>
         </div>
