--- a/src/app/products/add-product/add-product.component.html
+++ b/src/app/products/add-product/add-product.component.html
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <div class="card-header">
-                  Add New Product
-                </div>
+                <div class="card-header" *ngIf="!editMode">Add New Product</div>
+                <div class="card-header" *ngIf="editMode">UpdateProduct</div>
+
                 <div class="card-body">
                     <form [formGroup]="addProductForm" (ngSubmit)="onSubmit()" class="form-horizontal">
                         
@@ -33,29 +33,26 @@
                           </div>
 
 
-
+                          <div class="form-group">
+                            <label for="tech" class="col-sm-3 control-label">Category</label>
+                            <div class="col-sm-3">
+                              <input type="text" class="form-control" name="category" id="category" placeholder="category" formControlName="category">
+                            </div>
+                          </div> 
 
                           <div class="form-group">
                             <label for="name" class="col-sm-3 control-label">Product Image</label>
                             <div class="col-sm-3">
                               <label class="control-label small" for="file_img">Image (jpg/png):</label> <input type="file" name="file_img" formControlName="image">
                             </div>
-                          </div>  
+                          </div> 
 
-                          <div class="form-group">
-                            <label for="tech" class="col-sm-3 control-label">Category</label>
-                            <div class="col-sm-3">
-                           <select class="form-control" formControlName="category">
-                            <option value="" disabled selected>Category</option>
-                            <option value="Category 1">Category 1</option>
-                            <option value="Category 2">Category 2</option>
-                           </select>
-                            </div>
-                          </div>  
                           <hr>
                           <div class="form-group">
                             <div class="col-sm-offset-3 col-sm-9">
-                              <button type="submit" class="btn btn-primary" [disabled]="!addProductForm.valid">Add Product</button>
+                              <button type="submit" class="btn btn-primary" [disabled]="!addProductForm.valid" *ngIf="!editMode">Add Product</button>
+                              <button type="submit" class="btn btn-primary" [disabled]="!addProductForm.valid" *ngIf="editMode">Update Product</button>
+
                             </div>
                           </div>  
                         </form>
