--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,5 +1,21 @@
 
-<div class="container" *ngIf="!products">
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 mt-5">
+            <mat-form-field>
+                <mat-label>Select Category</mat-label>
+                <mat-select (selectionChange)="onSelect($event.value)">
+                  <mat-option *ngFor="let cat of allCategories" [value]="cat">
+                    {{cat}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
+    </div>
+</div>
+
+<div class="container" *ngIf="loading || !products">
     <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
             <div class="spinner-border" role="status">
