--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,6 @@
     color: #000 !important;
     font-weight: 500;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
