--- a/src/app/products/product-details/product-details.component.scss
+++ b/src/app/products/product-details/product-details.component.scss
@@ -10,7 +10,9 @@ body{
     margin-top: 12px;
     background: #fff
 }
-
+.data-custom{
+    padding-inline-start: 40px;
+}
 .product-content .carousel-control.left {
     margin-left: 0
 }
