--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,39 +2,39 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-3 d-flex justify-content-end">
-              <button type="button" class=" btn btn-primary" (click)="addProduct()">Add Product</button>
+              <button type="button" class=" btn btn-primary" (click)="addProduct()">{{ 'ADDPRODUCT' | transloco }}</button>
             </div>
             <div class="col-md-12 d-flex justify-content-center mb-4">
               <mat-spinner *ngIf="loading"></mat-spinner>
                 <div class="example-container mat-elevation-z8" *ngIf="!loading">
                     <mat-table #table [dataSource]="dataSource" >
                       <ng-container matColumnDef="id">
-                        <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'ID' | transloco }} </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
                       </ng-container>
                   
                       <ng-container matColumnDef="image">
-                        <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'IMAGE' | transloco }} </mat-header-cell>
                         <mat-cell *matCellDef="let element"> <img [src]="element.image" /></mat-cell>
                       </ng-container>
                   
                       <ng-container matColumnDef="title">
-                        <mat-header-cell *matHeaderCellDef> Title </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'TITLE' | transloco }} </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.title}} </mat-cell>
                       </ng-container>
                   
                       <ng-container matColumnDef="price">
-                        <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'PRICE' | transloco }}  </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
                       </ng-container>
 
                       <ng-container matColumnDef="category">
-                        <mat-header-cell *matHeaderCellDef> Category </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'CATEGORY' | transloco }}  </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.category}} </mat-cell>
                       </ng-container>
 
                       <ng-container matColumnDef="actions">
-                        <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef> {{ 'ACTIONS' | transloco }} </mat-header-cell>
                         <mat-cell *matCellDef="let element">
 
                           <button class="btn" mat-icon-button matTooltip="Edit" (click)="editProduct(element)">
