--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,11 +9,10 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-gem me-3"></i>{{ 'FOOTER.COMPANYNAME' | transloco }}
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              {{ 'FOOTER.COPMPANYNAMEDESC' | transloco }}
             </p>
           </div>
           <!-- Grid column -->
@@ -22,7 +21,7 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              {{ 'FOOTER.PRODUCTS' | transloco }}
             </h6>
             <p>
               <a href="#!" class="text-reset">Angular</a>
@@ -43,7 +42,7 @@
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              {{ 'FOOTER.USEFULLINKS' | transloco }}
             </h6>
             <p>
               <a href="#!" class="text-reset">Pricing</a>
@@ -64,7 +63,7 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Contact
+              {{ 'FOOTER.CONTACT' | transloco }}
             </h6>
             <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
             <p>
@@ -83,7 +82,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
+      © 2023 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
