--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-                    <a class="navbar-brand" href="#">Store App</a>
+                    <a class="navbar-brand" href="#">{{ 'STOREAPP' | transloco }}</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -11,15 +11,25 @@
                     <div class="collapse navbar-collapse"  *ngIf="isAuthenticated">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"  [routerLink]="['/dashboard']"  *ngIf="role == 'admin'" routerLinkActive="active-color" [routerLinkActiveOptions]="{ exact: true }">
-                          <a class="nav-link">Dashboard</a>
+                          <a class="nav-link">{{ 'HEADER.DASHBOARD' | transloco }}</a>
                         </li>
                         <li class="nav-item active" [routerLink]="['/products']"  *ngIf="role == 'user'" routerLinkActive="active-color" [routerLinkActiveOptions]="{ exact: true }">
-                          <a class="nav-link">Products</a>
+                          <a class="nav-link">{{ 'HEADER.PRODUCTS' | transloco }}</a>
                         </li>
                       </ul>
                     </div>
-                    <a class="nav-item mr-3 nav-link p-3" *ngIf="isAuthenticated"(click)="logout()">Logout</a>
-                    <a class="nav-item mr-3 nav-link p-3" *ngIf="!isAuthenticated"(click)="login()">Login</a>
+
+                    <div class="d-flex align-items-center">
+                      <div class="language-switcher">
+                          <select class="form-select" (change)="setActiveLang($event)">
+                                  <option *ngFor="let lang of availableLangs"
+                                          [selected]="activeLang === lang?.id">
+                                          {{lang.label}}</option>
+                          </select>
+                     </div>
+                        <a class="nav-item mr-3 nav-link p-3" *ngIf="isAuthenticated"(click)="logout()">{{ 'LOGOUT' | transloco }}</a>
+                      <a class="nav-item mr-3 nav-link p-3" *ngIf="!isAuthenticated"(click)="login()">{{ 'LOGIN' | transloco }}</a>
+                    </div>
                   </nav>
             </div>
         </div>
