--- a/src/app/products/product-details/product-details.component.html
+++ b/src/app/products/product-details/product-details.component.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-md-offset-1 col-sm-12 col-xs-12">
+            <div class="col-md-6 data-custom col-sm-12 col-xs-12">
                 
                 <h2 class="name">
                     {{productDetails.title}}
@@ -45,7 +45,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <a class="btn btn-success btn-lg">Add to cart (${{productDetails.price}})</a>
+                        <a class="btn btn-success btn-lg">{{ 'ADDTOCART' | transloco }} (${{productDetails.price}})</a>
                     </div>
                 </div>
             </div>
