--- a/src/app/products/products-list/products-list.component.scss
+++ b/src/app/products/products-list/products-list.component.scss
@@ -160,3 +160,7 @@ table.shoping-cart-table tr td:last-child {
   background: #ffffff;
   padding: 10px 15px;
 }
+
+mat-label{
+  font-family: 'Cairo', sans-serif !important;
+}
