--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,16 +24,16 @@
               {{ 'FOOTER.PRODUCTS' | transloco }}
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a   class="text-reset">Angular</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a   class="text-reset">React</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a   class="text-reset">Vue</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a   class="text-reset">Laravel</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -45,16 +45,16 @@
               {{ 'FOOTER.USEFULLINKS' | transloco }}
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a   class="text-reset">Pricing</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a   class="text-reset">Settings</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
+              <a   class="text-reset">Orders</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a   class="text-reset">Help</a>
             </p>
           </div>
           <!-- Grid column -->
