--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-                    <a class="navbar-brand" href="#">{{ 'STOREAPP' | transloco }}</a>
+                    <a class="navbar-brand">{{ 'STOREAPP' | transloco }}</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
